fixed z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -157,7 +157,7 @@ body {
 
 #top-container,
 #top-container * {
-	z-index: 1;
+	z-index: 2;
 }
 
 #top-container {
@@ -182,7 +182,7 @@ body {
 
 #search-input-container {
 	padding: 20px;
-	z-index: 2;
+	z-index: 3;
 }
 
 #search-input {
@@ -289,7 +289,7 @@ body {
 	left: 0;
 	width: 100%;
 	height: 100%; 
-	z-index: 3;
+	z-index: 4;
 }
 
 #modal-background {
